<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scotiabank.ui.UserSearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_alignParentTop="true"
           android:orientation="vertical">
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentTop="true"
               android:weightSum="2">

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1.5">
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/editUserSearch"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/enter_a_github_user_id" />

               </com.google.android.material.textfield.TextInputLayout>
               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/searchButton"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:text="@string/search" />
           </androidx.appcompat.widget.LinearLayoutCompat>


           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recyclerView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:visibility="visible"
               android:background="@android:color/white"/>

       </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userSearchEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:text="@string/search_github_user"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />

    </RelativeLayout>
</layout>