<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/userImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:transitionName="userImageView"
                android:layout_gravity="center_horizontal"
                app:roundedCornerRadius="8dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/repoDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/repoFullNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/forks"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forksCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>